2001-12-18  Richard Frith-Macdonald <rfm@gnu.org>

	* Tools/AGSHtml.m: Output tidyups and general format improvements.
	Add lins to other documents in project.
	* Tools/autogsdoc.m: Clean up a little and handle gsdoc files
	listed as source files better .... now looks for them in the
	source directory.

2001-12-17  Richard Frith-Macdonald <rfm@gnu.org>

	* Headers/gnustep/base/GSMime.h: Updates for autogsdoc
	* Headers/gnustep/base/GSXML.h: ditto
	* Headers/gnustep/base/NSArray.h: ditto
	* Headers/gnustep/base/NSAttributedString.h: ditto
	* Headers/gnustep/base/NSAutoreleasePool.h: ditto
	* Headers/gnustep/base/NSCalendarDate.h: ditto
	* Headers/gnustep/base/NSCharacterSet.h: ditto
	* Headers/gnustep/base/NSCoder.h: ditto
	* Headers/gnustep/base/NSConnection.h: ditto
	* Headers/gnustep/base/NSData.h: ditto
	* Headers/gnustep/base/NSDate.h: ditto
	* Headers/gnustep/base/NSDistantObject.h: ditto
	* Headers/gnustep/base/NSDistributedNotificationCenter.h: ditto
	* Headers/gnustep/base/NSInvocation.h: ditto
	* Headers/gnustep/base/NSLock.h: ditto
	* Headers/gnustep/base/NSMethodSignature.h: ditto
	* Headers/gnustep/base/NSNotification.h: ditto
	* Headers/gnustep/base/NSObject.h: ditto
	* Headers/gnustep/base/NSProxy.h: ditto
	* Headers/gnustep/base/NSRunLoop.h: ditto
	* Headers/gnustep/base/NSSet.h: ditto
	* Headers/gnustep/base/NSTimeZone.h: ditto
	* Headers/gnustep/base/NSTimer.h: ditto
	* Headers/gnustep/base/NSURL.h: ditto
	* Headers/gnustep/base/NSUndoManager.h: ditto
	* Headers/gnustep/base/NSUserDefaults.h: ditto
	* Headers/gnustep/base/NSValue.h: ditto
	* Source/GSArray.m: ditto
	* Source/GSAttributedString.m: ditto
	* Source/GSCompatibility.m: ditto
	* Source/GSCountedSet.m: ditto
	* Source/GSDictionary.m: ditto
	* Source/GSFFCallInvocation.m: ditto
	* Source/GSFFIInvocation.m: ditto
	* Source/GSFormat.m: ditto
	* Source/GSHTTPURLHandle.m: ditto
	* Source/GSLocale.m: ditto
	* Source/GSMime.m: ditto
	* Source/GSSet.m: ditto
	* Source/GSString.m: ditto